# tails-pdp

./: Cargo.toml  README.md  commit.sh  run.sh
.cargo/: config.toml
tails-pdp/: Cargo.toml  build.rs
tails-pdp-admin/: Cargo.toml
tails-pdp-admin/src/: main.rs
tails-pdp-common/: Cargo.toml
tails-pdp-common/src/: authorization_subscription.rs  lib.rs
tails-pdp-ebpf/: Cargo.toml  build.rs
tails-pdp-ebpf/src/: helpers.rs  hooks.rs  main.rs  maps.rs  vmlinux.rs
tails-pdp-ebpf/src/policies/: combine.rs  evaluate_static_policies.rs  evaluate_static_policys.rs  evaluate_stram_policies.rs  evaluate_stream_policies.rs  mod.rs
tails-pdp/src/: main.rs
