[package]
name = "tails-pdp-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tails-pdp-common = { path = "../tails-pdp-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tails-pdp"
path = "src/main.rs"
